# message-signing

./: .gitignore  Cargo.toml  README.md  todos.md
src/: bitcoin_message_sign.rs  error.rs  ethereum_message_sign.rs  lib.rs  tron_message_sign.rs
tests/: kms.rs  test_derive_eth_address.rs  test_derive_path.rs  test_derive_tron_address.rs
