[package]
name = "message-signing"
version = "0.1.0"
edition = "2021"
description = "A Rust library for message signing in Bitcoin and other blockchains"
keywords = ["bitcoin", "message", "signing", "verification"]

[dependencies]
bitcoin_hashes = { version = "0.14", default-features = false }
bitcoin = { version = "0.32.4", features = ["default"] }
base64 = "0.22.1"
thiserror = "1.0"
secp256k1 = "0.29.1"
sha3 = "0.10.8"
hex = "0.4.3"
bip32 = "0.5.2"
base58 = { version = "0.2" }

[dev-dependencies]
bip39 = "2.1.0"
anyhow = "1.0"